--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
     "dev": "vite",
     "server": "nodemon --exec tsx server/index.ts",
     "build": "vite build",
@@ -27,6 +28,7 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
     "tsx": "^4.20.6",
     "typescript": "~5.8.2",
